--- a/main.ipynb
+++ b/main.ipynb
@@ -2,10 +2,132 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'torch'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mtorch\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mpandas\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mpd\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mnumpy\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mnp\u001b[39;00m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'torch'"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.optim as optim\n",
+    "import torchvision\n",
+    "from torchvision import transforms, models, datasets\n",
+    "from torch.utils.data import DataLoader\n",
+    "from pathlib import Path\n",
+    "from typing import Optional, Union, Callable\n",
+    "\n",
+    "# Constants\n",
+    "batch_size = 32\n",
+    "num_classes = 102\n",
+    "num_epochs = 100\n",
+    "learning_rate = 0.001\n",
+    "\n",
+    "# Define data transformations\n",
+    "data_transforms = {\n",
+    "    'train': transforms.Compose([\n",
+    "        transforms.Resize((224, 224)),\n",
+    "        transforms.RandomHorizontalFlip(),\n",
+    "        transforms.ToTensor(),\n",
+    "        transforms.Normalize([0.485, 0.456, 0.406], [0.229, 0.224, 0.225])\n",
+    "    ]),\n",
+    "    'test': transforms.Compose([\n",
+    "        transforms.Resize((224, 224)),\n",
+    "        transforms.ToTensor(),\n",
+    "        transforms.Normalize([0.485, 0.456, 0.406], [0.229, 0.224, 0.225])\n",
+    "    ])\n",
+    "}\n",
+    "\n",
+    "# Load the Oxford 102 Flower dataset\n",
+    "data_dir = Path('./data')\n",
+    "\n",
+    "train_dataset = datasets.Flowers102(\n",
+    "    root=data_dir,\n",
+    "    split='train',\n",
+    "    transform=data_transforms['train'],\n",
+    "    download=True\n",
+    ")\n",
+    "\n",
+    "test_dataset = datasets.Flowers102(\n",
+    "    root=data_dir,\n",
+    "    split='test',\n",
+    "    transform=data_transforms['test'],\n",
+    "    download=True\n",
+    ")\n",
+    "\n",
+    "# Create data loaders\n",
+    "train_loader = DataLoader(train_dataset, batch_size=batch_size, shuffle=True)\n",
+    "test_loader = DataLoader(test_dataset, batch_size=batch_size, shuffle=False)\n",
+    "\n",
+    "# Use a pre-trained model from torchvision as a base model (ResNet-18)\n",
+    "model = models.resnet18(pretrained=True)\n",
+    "\n",
+    "# Modify the final layer to match the number of classes in the Oxford 102 Flower dataset\n",
+    "model.fc = nn.Linear(model.fc.in_features, num_classes)\n",
+    "\n",
+    "# Move the model to GPU if available\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "model.to(device)\n",
+    "\n",
+    "# Define loss function and optimizer\n",
+    "criterion = nn.CrossEntropyLoss()\n",
+    "optimizer = optim.Adam(model.parameters(), lr=learning_rate)\n",
+    "\n",
+    "# Training function\n",
+    "def train_model(model, train_loader, criterion, optimizer, num_epochs):\n",
+    "    model.train()\n",
+    "    for epoch in range(num_epochs):\n",
+    "        running_loss = 0.0\n",
+    "        for inputs, labels in train_loader:\n",
+    "            inputs, labels = inputs.to(device), labels.to(device)\n",
+    "            \n",
+    "            # Zero the parameter gradients\n",
+    "            optimizer.zero_grad()\n",
+    "            \n",
+    "            # Forward pass\n",
+    "            outputs = model(inputs)\n",
+    "            loss = criterion(outputs, labels)\n",
+    "            \n",
+    "            # Backward pass and optimization\n",
+    "            loss.backward()\n",
+    "            optimizer.step()\n",
+    "            \n",
+    "            running_loss += loss.item()\n",
+    "        \n",
+    "        # Print loss for the epoch\n",
+    "        print(f\"Epoch {epoch + 1}/{num_epochs}, Loss: {running_loss / len(train_loader)}\")\n",
+    "\n",
+    "# Testing function\n",
+    "# def test_model(model, test_loader):\n",
+    "#     model.eval()\n",
+    "#     correct = 0\n",
+    "#     total = 0\n",
+    "    \n",
+    "#     with torch.no_grad():\n",
+    "#         for inputs, labels in test_loader:\n",
+    "#             inputs, labels = inputs.to(device), labels.to(device)\n",
+    "#             outputs = model(inputs)\n",
+    "#             _, predicted = torch.max(outputs.data, 1)\n",
+    "#             total += labels.size(0)\n",
+    "#             correct += (predicted == labels).sum().item()\n",
+    "    \n",
+    "#     accuracy = correct / total\n",
+    "#     print(f\"Test Accuracy: {accuracy * 100:.2f}%\")\n",
+    "\n",
+    "# Train and evaluate the model\n",
+    "# train_model(model, train_loader, criterion, optimizer, num_epochs)\n",
+    "# test_model(model, test_loader)"
+   ]
   }
  ],
  "metadata": {
@@ -15,7 +137,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.11.1 (v3.11.1:a7a450f84a, Dec  6 2022, 15:24:06) [Clang 13.0.0 (clang-1300.0.29.30)]"
   },
   "orig_nbformat": 4,
