--- a/main.ipynb
+++ b/main.ipynb
@@ -18,116 +18,157 @@
     }
    ],
    "source": [
+    "import matplotlib.pyplot as plt\n",
     "import torch\n",
-    "import torch.nn as nn\n",
-    "import torch.optim as optim\n",
-    "import torchvision\n",
-    "from torchvision import transforms, models, datasets\n",
+    "import numpy as np\n",
+    "from torch import nn, optim\n",
+    "import torch.nn.functional as F\n",
+    "from torchvision import datasets, transforms\n",
     "from torch.utils.data import DataLoader\n",
-    "from pathlib import Path\n",
-    "from typing import Optional, Union, Callable\n",
+    "from collections import OrderedDict\n",
+    "from PIL import Image\n",
     "\n",
-    "# Constants\n",
-    "batch_size = 16\n",
-    "num_classes = 102\n",
-    "num_epochs = 100\n",
-    "learning_rate = 0.001\n",
+    "#GPU\n",
+    "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
     "\n",
-    "# Define data transformations\n",
-    "data_transforms = {\n",
-    "    'train': transforms.Compose([\n",
-    "        transforms.Resize((180, 180)),\n",
-    "        transforms.RandomHorizontalFlip(),\n",
-    "        transforms.ToTensor(),\n",
-    "        transforms.Normalize([0.485, 0.456, 0.406], [0.229, 0.224, 0.225])\n",
-    "    ]),\n",
-    "    'test': transforms.Compose([\n",
-    "        transforms.Resize((224, 224)),\n",
-    "        transforms.ToTensor(),\n",
-    "        transforms.Normalize([0.485, 0.456, 0.406], [0.229, 0.224, 0.225])\n",
-    "    ])\n",
-    "}\n",
+    "data_dir = 'data/flowers102'\n",
     "\n",
-    "# Load the Oxford 102 Flower dataset\n",
-    "data_dir = Path('./data')\n",
+    "# data augmentation transforms\n",
+    "train_transforms = transforms.Compose([\n",
+    "    transforms.RandomRotation(15),\n",
+    "    transforms.RandomResizedCrop(224),  # Working with small figures\n",
+    "    transforms.RandomHorizontalFlip(),\n",
+    "    transforms.RandomVerticalFlip(),\n",
+    "    transforms.ColorJitter(brightness=0.2, contrast=0.2, saturation=0.2, hue=0.2),\n",
+    "    transforms.RandomAffine(degrees=20, translate=(0.2, 0.2), scale=(0.75, 1.25), shear=20),\n",
+    "    transforms.RandomGrayscale(p=0.1),\n",
+    "    transforms.RandomPerspective(distortion_scale=0.5, p=0.5, interpolation=3),\n",
+    "    transforms.RandomInvert(p=0.1),\n",
+    "    transforms.RandomSolarize(threshold=192.0, p=0.1),\n",
+    "    transforms.ToTensor(),\n",
+    "    transforms.Normalize([0.485, 0.456, 0.406], [0.229, 0.224, 0.225])\n",
+    "])\n",
     "\n",
-    "train_dataset = datasets.Flowers102(\n",
-    "    root=data_dir,\n",
-    "    split='train',\n",
-    "    transform=data_transforms['train'],\n",
-    "    download=True\n",
-    ")\n",
+    "validation_transforms = transforms.Compose([\n",
+    "    transforms.Resize(180),\n",
+    "    transforms.CenterCrop(180),\n",
+    "    transforms.ToTensor(),\n",
+    "    transforms.Normalize([0.485, 0.456, 0.406], [0.229, 0.224, 0.225])\n",
+    "])\n",
     "\n",
-    "test_dataset = datasets.Flowers102(\n",
-    "    root=data_dir,\n",
-    "    split='test',\n",
-    "    transform=data_transforms['test'],\n",
-    "    download=True\n",
-    ")\n",
+    "#load data\n",
+    "train_dataset = datasets.Flowers102(root=data_dir, split='train', transform=train_transforms, download=True)\n",
+    "validation_dataset = datasets.Flowers102(root=data_dir, split='val', transform=validation_transforms, download=True)\n",
+    "test_dataset = datasets.Flowers102(root=data_dir, split='test', transform=validation_transforms, download=True)\n",
     "\n",
-    "# Create data loaders\n",
-    "train_loader = DataLoader(train_dataset, batch_size=batch_size, shuffle=True)\n",
-    "test_loader = DataLoader(test_dataset, batch_size=batch_size, shuffle=False)\n",
     "\n",
-    "# Use a pre-trained model from torchvision as a base model (ResNet-18)\n",
-    "model = models.resnet18(pretrained=True)\n",
+    "class_idx_mapping = {str(i): i for i in range(102)}\n",
+    "train_dataset.class_to_idx = class_idx_mapping\n",
+    "validation_dataset.class_to_idx = class_idx_mapping\n",
+    "test_dataset.class_to_idx = class_idx_mapping\n",
     "\n",
-    "# Modify the final layer to match the number of classes in the Oxford 102 Flower dataset\n",
-    "model.fc = nn.Linear(model.fc.in_features, num_classes)\n",
     "\n",
-    "# Move the model to GPU if available\n",
-    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "train_dataloader = DataLoader(train_dataset, shuffle=True, batch_size=64, num_workers=4)\n",
+    "valid_dataloader = DataLoader(validation_dataset, shuffle=True, batch_size=64, num_workers=4)\n",
+    "test_dataloader = DataLoader(test_dataset, shuffle=True, batch_size=64, num_workers=4)\n",
+    "\n",
+    "\n",
+    "class CustomCNN(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super(CustomCNN, self).__init__()\n",
+    "        self.features = nn.Sequential(\n",
+    "            nn.Conv2d(3, 32, kernel_size=3, padding=1),\n",
+    "            nn.ReLU(inplace=True),\n",
+    "            nn.MaxPool2d(kernel_size=2, stride=2),\n",
+    "\n",
+    "            nn.Conv2d(32, 64, kernel_size=3, padding=1),\n",
+    "            nn.ReLU(inplace=True),\n",
+    "            nn.MaxPool2d(kernel_size=2, stride=2),\n",
+    "\n",
+    "            nn.Conv2d(64, 128, kernel_size=3, padding=1),\n",
+    "            nn.ReLU(inplace=True),\n",
+    "            nn.MaxPool2d(kernel_size=2, stride=2),\n",
+    "        )\n",
+    "\n",
+    "        self.classifier = nn.Sequential(OrderedDict([\n",
+    "            ('fc1', nn.Linear(128 * 22 * 22, 512)),  # Adjusted for 180x180 input size reduced by 3 pooling layers\n",
+    "            ('relu', nn.ReLU(inplace=True)),\n",
+    "            ('dropout', nn.Dropout(p=0.5)),\n",
+    "            ('fc2', nn.Linear(512, 102)),\n",
+    "            ('output', nn.LogSoftmax(dim=1))\n",
+    "        ]))\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        x = self.features(x)\n",
+    "        x = x.view(x.size(0), -1)\n",
+    "        x = self.classifier(x)\n",
+    "        return x\n",
+    "\n",
+    "model = CustomCNN()\n",
     "model.to(device)\n",
     "\n",
-    "# Define loss function and optimizer\n",
-    "criterion = nn.CrossEntropyLoss()\n",
-    "optimizer = optim.Adam(model.parameters(), lr=learning_rate)\n",
+    "criterion = nn.NLLLoss()\n",
+    "optimizer = optim.Adam(model.parameters(), lr=0.0001)\n",
     "\n",
-    "# Training function\n",
-    "def train_model(model, train_loader, criterion, optimizer, num_epochs):\n",
+    "def validation(model, testloader, criterion, device):\n",
+    "    test_loss = 0\n",
+    "    accuracy = 0\n",
+    "    model.to(device)\n",
+    "    model.eval()\n",
+    "    with torch.no_grad():\n",
+    "        for images, labels in testloader:\n",
+    "            images, labels = images.to(device), labels.to(device)\n",
+    "            output = model(images)\n",
+    "            test_loss += criterion(output, labels).item()\n",
+    "            ps = torch.exp(output)\n",
+    "            equality = (labels.data == ps.max(dim=1)[1])\n",
+    "            accuracy += equality.type(torch.FloatTensor).mean()\n",
+    "    return test_loss, accuracy\n",
+    "\n",
+    "def train(model, trainloader, validloader, epochs, print_every, criterion, optimizer, device='cuda'):\n",
+    "    steps = 0\n",
     "    model.train()\n",
-    "    for epoch in range(num_epochs):\n",
-    "        running_loss = 0.0\n",
-    "        for inputs, labels in train_loader:\n",
-    "            inputs, labels = inputs.to(device), labels.to(device)\n",
-    "            \n",
-    "            # Zero the parameter gradients\n",
+    "    model.to(device)\n",
+    "    for e in range(epochs):\n",
+    "        running_loss = 0\n",
+    "        for images, labels in trainloader:\n",
+    "            steps += 1\n",
+    "            images, labels = images.to(device), labels.to(device)\n",
     "            optimizer.zero_grad()\n",
-    "            \n",
-    "            # Forward pass\n",
-    "            outputs = model(inputs)\n",
+    "            outputs = model(images)\n",
     "            loss = criterion(outputs, labels)\n",
-    "            \n",
-    "            # Backward pass and optimization\n",
     "            loss.backward()\n",
     "            optimizer.step()\n",
-    "            \n",
     "            running_loss += loss.item()\n",
-    "        \n",
-    "        # Print loss for the epoch\n",
-    "        print(f\"Epoch {epoch + 1}/{num_epochs}, Loss: {running_loss / len(train_loader)}\")\n",
+    "            if steps % print_every == 0:\n",
+    "                model.eval()\n",
+    "                with torch.no_grad():\n",
+    "                    validation_loss, accuracy = validation(model, validloader, criterion, device)\n",
+    "                print(\"Epoch: {}/{}.. \".format(e+1, epochs),\n",
+    "                      \"Training Loss: {:.3f}.. \".format(running_loss/print_every),\n",
+    "                      \"Validation Loss: {:.3f}.. \".format(validation_loss/len(validloader)),\n",
+    "                      \"Validation Accuracy: {:.3f}\".format((accuracy/len(validloader))*100))\n",
+    "                model.train()\n",
+    "                running_loss = 0\n",
     "\n",
-    "#Testing function\n",
+    "train(model=model, trainloader=train_dataloader, validloader=valid_dataloader, epochs=500, print_every=20, criterion=criterion, optimizer=optimizer, device=device)\n",
     "\n",
-    "def test_model(model, test_loader):\n",
-    "    model.eval()\n",
+    "def check_accuracy_on_test(testloader, model):\n",
     "    correct = 0\n",
     "    total = 0\n",
-    "    \n",
+    "    model.to(device)\n",
     "    with torch.no_grad():\n",
-    "        for inputs, labels in test_loader:\n",
-    "            inputs, labels = inputs.to(device), labels.to(device)\n",
-    "            outputs = model(inputs)\n",
+    "        for data in testloader:\n",
+    "            images, labels = data\n",
+    "            images, labels = images.to(device), labels.to(device)\n",
+    "            outputs = model(images)\n",
     "            _, predicted = torch.max(outputs.data, 1)\n",
     "            total += labels.size(0)\n",
     "            correct += (predicted == labels).sum().item()\n",
-    "    \n",
-    "    accuracy = correct / total\n",
-    "    print(f\"Test Accuracy: {accuracy * 100:.2f}%\")\n",
+    "    return 100 * correct / total\n",
     "\n",
-    "#Train and evaluate the model\n",
-    "train_model(model, train_loader, criterion, optimizer, num_epochs)\n",
-    "test_model(model, test_loader)"
+    "test_accuracy = check_accuracy_on_test(test_dataloader, model)\n",
+    "print('Accuracy of the network on the test images: %d %%' % test_accuracy)"
    ]
   }
  ],
