--- a/main.ipynb
+++ b/main.ipynb
@@ -42,9 +42,6 @@
     "    transforms.ColorJitter(brightness=0.2, contrast=0.2, saturation=0.2, hue=0.2),\n",
     "    transforms.RandomAffine(degrees=20, translate=(0.2, 0.2), scale=(0.75, 1.25), shear=20),\n",
     "    transforms.RandomGrayscale(p=0.1),\n",
-    "    transforms.RandomPerspective(distortion_scale=0.5, p=0.5, interpolation=3),\n",
-    "    transforms.RandomInvert(p=0.1),\n",
-    "    transforms.RandomSolarize(threshold=192.0, p=0.1),\n",
     "    transforms.ToTensor(),\n",
     "    transforms.Normalize([0.485, 0.456, 0.406], [0.229, 0.224, 0.225])\n",
     "])\n",
@@ -188,7 +185,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.11.1 (v3.11.1:a7a450f84a, Dec  6 2022, 15:24:06) [Clang 13.0.0 (clang-1300.0.29.30)]"
   },
   "orig_nbformat": 4,
   "vscode": {
