--- a/main.ipynb
+++ b/main.ipynb
@@ -33,14 +33,14 @@
     "\n",
     "data_dir = 'data/flowers102'\n",
     "\n",
-    "# data augmentation transforms\n",
+    "#data augmentation transforms\n",
     "train_transforms = transforms.Compose([\n",
-    "    transforms.RandomRotation(15),\n",
-    "    transforms.RandomResizedCrop(224),  # Working with small figures\n",
+    "    transforms.RandomRotation(30),\n",
+    "    transforms.RandomResizedCrop(180),  \n",
     "    transforms.RandomHorizontalFlip(),\n",
     "    transforms.RandomVerticalFlip(),\n",
     "    transforms.ColorJitter(brightness=0.2, contrast=0.2, saturation=0.2, hue=0.2),\n",
-    "    transforms.RandomAffine(degrees=20, translate=(0.2, 0.2), scale=(0.75, 1.25), shear=20),\n",
+    "    transforms.RandomAffine(degrees=0, translate=(0.1, 0.1), scale=(0.8, 1.2)),\n",
     "    transforms.RandomGrayscale(p=0.1),\n",
     "    transforms.ToTensor(),\n",
     "    transforms.Normalize([0.485, 0.456, 0.406], [0.229, 0.224, 0.225])\n",
@@ -53,7 +53,7 @@
     "    transforms.Normalize([0.485, 0.456, 0.406], [0.229, 0.224, 0.225])\n",
     "])\n",
     "\n",
-    "#load data\n",
+    "# Load the datasets \n",
     "train_dataset = datasets.Flowers102(root=data_dir, split='train', transform=train_transforms, download=True)\n",
     "validation_dataset = datasets.Flowers102(root=data_dir, split='val', transform=validation_transforms, download=True)\n",
     "test_dataset = datasets.Flowers102(root=data_dir, split='test', transform=validation_transforms, download=True)\n",
@@ -69,10 +69,10 @@
     "valid_dataloader = DataLoader(validation_dataset, shuffle=True, batch_size=64, num_workers=4)\n",
     "test_dataloader = DataLoader(test_dataset, shuffle=True, batch_size=64, num_workers=4)\n",
     "\n",
-    "\n",
-    "class CustomCNN(nn.Module):\n",
+    "# Define a CNN model\n",
+    "class CNN(nn.Module):\n",
     "    def __init__(self):\n",
-    "        super(CustomCNN, self).__init__()\n",
+    "        super(CNN, self).__init__()\n",
     "        self.features = nn.Sequential(\n",
     "            nn.Conv2d(3, 32, kernel_size=3, padding=1),\n",
     "            nn.ReLU(inplace=True),\n",
@@ -101,7 +101,7 @@
     "        x = self.classifier(x)\n",
     "        return x\n",
     "\n",
-    "model = CustomCNN()\n",
+    "model = CNN()\n",
     "model.to(device)\n",
     "\n",
     "criterion = nn.NLLLoss()\n",
@@ -148,8 +148,9 @@
     "                model.train()\n",
     "                running_loss = 0\n",
     "\n",
-    "train(model=model, trainloader=train_dataloader, validloader=valid_dataloader, epochs=500, print_every=20, criterion=criterion, optimizer=optimizer, device=device)\n",
+    "train(model=model, trainloader=train_dataloader, validloader=valid_dataloader, epochs=2000, print_every=20, criterion=criterion, optimizer=optimizer, device=device)\n",
     "\n",
+    "# Testing the network\n",
     "def check_accuracy_on_test(testloader, model):\n",
     "    correct = 0\n",
     "    total = 0\n",
@@ -165,7 +166,7 @@
     "    return 100 * correct / total\n",
     "\n",
     "test_accuracy = check_accuracy_on_test(test_dataloader, model)\n",
-    "print('Accuracy of the network on the test images: %d %%' % test_accuracy)"
+    "print('Accuracy of the network on the test images: %d %%' % test_accuracy)\n"
    ]
   }
  ],
