--- a/main.ipynb
+++ b/main.ipynb
@@ -18,6 +18,7 @@
     }
    ],
    "source": [
+    "# importing\n",
     "import matplotlib.pyplot as plt\n",
     "import torch\n",
     "import numpy as np\n",
@@ -25,15 +26,15 @@
     "import torch.nn.functional as F\n",
     "from torchvision import datasets, transforms\n",
     "from torch.utils.data import DataLoader\n",
-    "from collections import OrderedDict\n",
-    "from PIL import Image\n",
     "\n",
-    "#GPU\n",
+    "\n",
+    "# GPU\n",
     "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
     "\n",
+    "# Define data directories\n",
     "data_dir = 'data/flowers102'\n",
     "\n",
-    "#data augmentation transforms\n",
+    "# Define data augmentation transforms\n",
     "train_transforms = transforms.Compose([\n",
     "    transforms.RandomRotation(30),\n",
     "    transforms.RandomResizedCrop(180),  \n",
@@ -53,7 +54,7 @@
     "    transforms.Normalize([0.485, 0.456, 0.406], [0.229, 0.224, 0.225])\n",
     "])\n",
     "\n",
-    "# Load the datasets \n",
+    "# Load the datasets using Flowers102\n",
     "train_dataset = datasets.Flowers102(root=data_dir, split='train', transform=train_transforms, download=True)\n",
     "validation_dataset = datasets.Flowers102(root=data_dir, split='val', transform=validation_transforms, download=True)\n",
     "test_dataset = datasets.Flowers102(root=data_dir, split='test', transform=validation_transforms, download=True)\n",
@@ -64,15 +65,15 @@
     "validation_dataset.class_to_idx = class_idx_mapping\n",
     "test_dataset.class_to_idx = class_idx_mapping\n",
     "\n",
+    "# Using the image datasets and the transforms,\n",
+    "train_dataloader = DataLoader(train_dataset, shuffle=True, batch_size=8, num_workers=4)\n",
+    "valid_dataloader = DataLoader(validation_dataset, shuffle=True, batch_size=8, num_workers=4)\n",
+    "test_dataloader = DataLoader(test_dataset, shuffle=True, batch_size=8, num_workers=4)\n",
     "\n",
-    "train_dataloader = DataLoader(train_dataset, shuffle=True, batch_size=64, num_workers=4)\n",
-    "valid_dataloader = DataLoader(validation_dataset, shuffle=True, batch_size=64, num_workers=4)\n",
-    "test_dataloader = DataLoader(test_dataset, shuffle=True, batch_size=64, num_workers=4)\n",
-    "\n",
-    "# Define a CNN model\n",
-    "class CNN(nn.Module):\n",
+    "# model\n",
+    "class CustomCNN(nn.Module):\n",
     "    def __init__(self):\n",
-    "        super(CNN, self).__init__()\n",
+    "        super(CustomCNN, self).__init__()\n",
     "        self.features = nn.Sequential(\n",
     "            nn.Conv2d(3, 32, kernel_size=3, padding=1),\n",
     "            nn.ReLU(inplace=True),\n",
@@ -101,7 +102,7 @@
     "        x = self.classifier(x)\n",
     "        return x\n",
     "\n",
-    "model = CNN()\n",
+    "model = CustomCNN()\n",
     "model.to(device)\n",
     "\n",
     "criterion = nn.NLLLoss()\n",
@@ -141,14 +142,14 @@
     "                model.eval()\n",
     "                with torch.no_grad():\n",
     "                    validation_loss, accuracy = validation(model, validloader, criterion, device)\n",
-    "                print(\"Epoch: {}/{}.. \".format(e+1, epochs),\n",
+    "                print(\"Epoch: {}/{}.. \".format(e, epochs),\n",
     "                      \"Training Loss: {:.3f}.. \".format(running_loss/print_every),\n",
     "                      \"Validation Loss: {:.3f}.. \".format(validation_loss/len(validloader)),\n",
     "                      \"Validation Accuracy: {:.3f}\".format((accuracy/len(validloader))*100))\n",
     "                model.train()\n",
     "                running_loss = 0\n",
     "\n",
-    "train(model=model, trainloader=train_dataloader, validloader=valid_dataloader, epochs=2000, print_every=20, criterion=criterion, optimizer=optimizer, device=device)\n",
+    "train(model=model, trainloader=train_dataloader, validloader=valid_dataloader, epochs=500, print_every=20, criterion=criterion, optimizer=optimizer, device=device)\n",
     "\n",
     "# Testing the network\n",
     "def check_accuracy_on_test(testloader, model):\n",
