--- a/main.ipynb
+++ b/main.ipynb
@@ -26,6 +26,8 @@
     "import torch.nn.functional as F\n",
     "from torchvision import datasets, transforms\n",
     "from torch.utils.data import DataLoader\n",
+    "from collections import OrderedDict\n",
+    "from PIL import Image\n",
     "\n",
     "\n",
     "# GPU\n",
