--- a/main.ipynb
+++ b/main.ipynb
@@ -18,7 +18,6 @@
     }
    ],
    "source": [
-    "# importing\n",
     "import matplotlib.pyplot as plt\n",
     "import torch\n",
     "import numpy as np\n",
@@ -29,8 +28,7 @@
     "from collections import OrderedDict\n",
     "from PIL import Image\n",
     "\n",
-    "\n",
-    "# GPU\n",
+    "# Device configuration\n",
     "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
     "\n",
     "# Define data directories\n",
@@ -39,7 +37,7 @@
     "# Define data augmentation transforms\n",
     "train_transforms = transforms.Compose([\n",
     "    transforms.RandomRotation(30),\n",
-    "    transforms.RandomResizedCrop(180),  \n",
+    "    transforms.RandomResizedCrop(180),  # Working with small figures\n",
     "    transforms.RandomHorizontalFlip(),\n",
     "    transforms.RandomVerticalFlip(),\n",
     "    transforms.ColorJitter(brightness=0.2, contrast=0.2, saturation=0.2, hue=0.2),\n",
@@ -61,18 +59,18 @@
     "validation_dataset = datasets.Flowers102(root=data_dir, split='val', transform=validation_transforms, download=True)\n",
     "test_dataset = datasets.Flowers102(root=data_dir, split='test', transform=validation_transforms, download=True)\n",
     "\n",
-    "\n",
+    "# Manually create the class to index mapping\n",
     "class_idx_mapping = {str(i): i for i in range(102)}\n",
     "train_dataset.class_to_idx = class_idx_mapping\n",
     "validation_dataset.class_to_idx = class_idx_mapping\n",
     "test_dataset.class_to_idx = class_idx_mapping\n",
     "\n",
-    "# Using the image datasets and the transforms,\n",
+    "# Using the image datasets and the transforms, define the dataloaders\n",
     "train_dataloader = DataLoader(train_dataset, shuffle=True, batch_size=8, num_workers=4)\n",
     "valid_dataloader = DataLoader(validation_dataset, shuffle=True, batch_size=8, num_workers=4)\n",
     "test_dataloader = DataLoader(test_dataset, shuffle=True, batch_size=8, num_workers=4)\n",
     "\n",
-    "# model\n",
+    "# Define a custom CNN model\n",
     "class CustomCNN(nn.Module):\n",
     "    def __init__(self):\n",
     "        super(CustomCNN, self).__init__()\n",
@@ -144,7 +142,7 @@
     "                model.eval()\n",
     "                with torch.no_grad():\n",
     "                    validation_loss, accuracy = validation(model, validloader, criterion, device)\n",
-    "                print(\"Epoch: {}/{}.. \".format(e, epochs),\n",
+    "                print(\"Epoch: {}/{}.. \".format(e+1, epochs),\n",
     "                      \"Training Loss: {:.3f}.. \".format(running_loss/print_every),\n",
     "                      \"Validation Loss: {:.3f}.. \".format(validation_loss/len(validloader)),\n",
     "                      \"Validation Accuracy: {:.3f}\".format((accuracy/len(validloader))*100))\n",
